# routes/cards.js
@@ -1,14 +1,22 @@
 const express = require('express');
 const router = express.Router();
-const sharkController = require('../controllers/sharks');
-const validateShark = require('../middleware/validate');
-const { isAuthenticated } = require("../middleware/authenticate");
 
-router.get('/', sharkController.getAll);
-router.get('/:id', sharkController.getSingle);
+const cardsController = require('../controllers/cards');
+const validation = require('../middleware/validate');
 
-router.post('/', isAuthenticated, validateShark, sharkController.createShark);
-router.put('/:id', isAuthenticated,  validateShark, sharkController.updateShark);
-router.delete('/:id', isAuthenticated, sharkController.deleteShark);
+// GET all cards
+router.get('/', cardsController.getAll);
+
+// GET single card by ID
+router.get('/:id', cardsController.getSingle);
+
+// POST create new card
+router.post('/', validation.saveCard, cardsController.createCard);
+
+// PUT update card by ID
+router.put('/:id', validation.saveCard, cardsController.updateCard);
+
+// DELETE card by ID
+router.delete('/:id', cardsController.deleteCard);
 
 module.exports = router;
